	* support/regression/MakeList:
	  Disable a test for targets that cannot complete it within reasonable time.
	* support/regression/tests/bug-3385.c:
	  Disable new test for mos6502, where it fails (bug #3386).
	* support/regression/tests/gcc-torture-execute-20040409-?.c:
	  Disable parts of tests that test for GCC implementation-defined behaviour.

2022-05-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge regtest branch.

2022-05-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCval.c,
	  src/SDCCast.c:
	  support/regression/tests/bug-3391.c:
	  Fix bug #3391.

2022-05-16 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in:
	  avoid various newline compound echo arguments.

2022-05-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3388.
	* src/SDCCsymt.c,
	  support/valdiag/tests/bug-3389.c:
	  device/include/float.h,
	  support/regression/tests/bug-1805702.c:
	  Fix bug #3389.

2022-05-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-3385.c:
	  Disable new test for hc08 and s08, where it fails (bug #3386).

2022-05-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge regtest branch.

2022-05-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/peeph.def,
	  support/regression/tests/bug-3385.c:
	  Fix bug #3385, patch by Ryan Hartlage (ryanplusplus).

2022-05-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList:
	  Exclude tests that fail on mcs51 due to abnormal stops.

2022-05-11 Felix Salfelder <felix AT salfelder.org>

	* support/regression/MakeList
	  exclude queen on pdk15-stack-auto.

2022-05-11 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in:
	  verbosity fix.

2022-05-10 Felix Salfelder <felix AT salfelder.org>

	* support/valdiag/Makefile.in: